Fixed table alignment of student syllabus

--- a/app/assets/stylesheets/_student_dashboard.sass
+++ b/app/assets/stylesheets/_student_dashboard.sass
@@ -246,6 +246,9 @@ img.earned
   .has-tip
     color: #FFF
 
+p.predictor-description
+  margin: 0.25rem 0 .5rem
+
 /*striping on course progress display*/
 .striped
   width: 100%
